--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head.ejs') %>
-<body>
-  the Content you requested is missing.
-</body>
+  <%- include('./partials/head.ejs') %>
+  <body>
+    the Content you requested is missing. NERD.
+  </body>
 </html>
